# qdp-lapack

./: .gitignore  CMakeLists.txt  Config.cmake.in  Makefile.in  acinclude.m4  configure  configure.ac
include/: Makefile.am  Makefile.in  bicgstab.h  fortran_lapack.h  qdp-lapack.h  qdp-lapack_Complex.h  qdp-lapack_IncrEigbicg.h  qdp-lapack_IncrEigpcg.h  qdp-lapack_config_internal.h.in  qdp-lapack_eigbicg.h  qdp-lapack_eigpcg.h  qdp-lapack_fortran_lapack.h  qdp-lapack_numerical.h  qdp-lapack_numerical_private.h  qdp-lapack_restart_X.h  qdp-lapack_wtime.h
lib/: CMakeLists.txt  Complex.c  G_eval.c  IncrEigbicg.c  IncrEigpcg.c  IncrEigpcg_epsRes.c  IncrEigpcg_orthogonalize.c  IncrEigpcg_stub.c  Makefile.am  Makefile.in  biortho.c  cdotcsub.f  clapack.cc  eigbicg.c  eigpcg.c  fortran_lapack.cc  lapack_stub.cc  numerical.c  ortho.c  restart_X.c  wtime.c
